Swapping positions of Chatbot and Self messages

--- a/src/app/message/table-message/table-message.component.html
+++ b/src/app/message/table-message/table-message.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="{
-    'card bg-success text-white': sender === 'You',
-    'card bg-light text-right': sender === 'ChatBot'
+    'card bg-success text-white': sender === 'ChatBot',
+    'card bg-light text-right': sender === 'You'
   }">
     <div class="card-body">
       <p class="card-title">
