--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -3,19 +3,14 @@
 
 <div #keepScrollDown class="container-fluid position-fixed" id="chatDisplay" style="overflow-y: scroll; height: 90%;">
   <ng-template message-host></ng-template>
-  <div *ngIf="botTyping" class="alert alert-secondary" role="alert">
-    Bot is typing ...
-  </div>
+  <span *ngIf="botTyping" class="badge badge-primary">Bot is typing ...</span>
 </div>
 
 <div class="container-fluid input-group fixed-bottom" id="chatInput">
   <input type="text" id="textMessage" [(ngModel)]="textMessage" class="form-control" (keydown.enter)="sendRequest()">
-  <label for="attachment">
-    <span class="oi oi-paperclip" title="paperclip" aria-hidden="true"></span>
-  </label>
-
   <div class="input-group-append">
+    <input type="file" id="attachment" (change)="onFileChange($event)" #attachment>
+    <button class="btn" type="button" (click)="clearFileSelection()">Clear</button>
     <button class="btn btn-primary" type="button" (click)="sendRequest()">Send</button>
   </div>
 </div>
-<input class="invisible" type="file" id="attachment" (change)="onFileChange($event)" #fileInput>
