--- a/src/app/message/graph-message/graph-message.component.html
+++ b/src/app/message/graph-message/graph-message.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="{
-    'bg-success text-white text-right': sender === 'You',
-    'bg-light': sender === 'ChatBot'
-  }" class="card round">
+    'bg-success text-white text-right tri-right right-in': sender === 'You',
+    'bg-light tri-left left-in': sender === 'ChatBot'
+}" class="card round">
     <div class="card-body">
         <p class="card-title">
             <b>{{ sender }}</b>
