--- a/src/app/message/table-message/table-message.component.html
+++ b/src/app/message/table-message/table-message.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="{
-  'bg-success text-white text-right': sender === 'You',
-  'bg-light': sender === 'ChatBot'
+  'bg-success text-white text-right tri-right right-in': sender === 'You',
+  'bg-light tri-left left-in': sender === 'ChatBot'
 }" class="card round">
 <div class="card-body table-responsive-sm">
   <p class="card-title">
