--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -1,16 +1,18 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"
-  integrity="sha256-BJ/G+e+y7bQdrYkS2RBTyNfBHpA9IuGaPmf9htub5MQ=" crossorigin="anonymous" />
+<div class="container">
+  <div class="container" #keepScrollDown id="chatDisplay" style="overflow: auto; height: 500px;">
+    <ng-template message-host></ng-template>
+    <div class="row justify-content-center">
+      <span class="align-self-center" *ngIf="botTyping" class="badge badge-primary">Bot is typing ...</span>
+    </div>
+  </div>
 
-<div #keepScrollDown class="container-fluid position-fixed" id="chatDisplay" style="overflow-y: scroll; height: 90%;">
-  <ng-template message-host></ng-template>
-  <span *ngIf="botTyping" class="badge badge-primary">Bot is typing ...</span>
-</div>
-
-<div class="container-fluid input-group fixed-bottom" id="chatInput">
-  <input type="text" id="textMessage" [(ngModel)]="textMessage" class="form-control" (keydown.enter)="sendRequest()">
-  <div class="input-group-append">
-    <input type="file" id="attachment" (change)="onFileChange($event)" #attachment>
-    <button class="btn" type="button" (click)="clearFileSelection()">Clear</button>
-    <button class="btn btn-primary" type="button" (click)="sendRequest()">Send</button>
+  <div class="container" id="chatInput">
+    <input type="text" id="textMessage" [(ngModel)]="textMessage" class="form-control" (keydown.enter)="sendRequest()">
+    <div class="input-group-append">
+      <input type="file" id="attachment" (change)="onFileChange($event)" #attachment>
+      <button class="btn" type="button" (click)="clearFileSelection()">Clear</button>
+      <button class="btn btn-primary" type="button" (click)="sendRequest()">Send</button>
+    </div>
   </div>
 </div>
+
