--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+	height: 100%;
+}
 .round {
     border-radius: 30px;
     margin: 10px;
