--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -1,18 +1,22 @@
 <div class="container" style="height: 100%; background-color:gainsboro">
-  <div class="container" #keepScrollDown id="chatDisplay" style="overflow: auto; height: 85%;">
+  <div class="container" #keepScrollDown id="chatDisplay" style="overflow: auto; height: 90%;">
     <ng-template message-host></ng-template>
     <div class="row justify-content-center">
       <span class="align-self-center" *ngIf="botTyping" class="badge badge-primary">Bot is typing ...</span>
     </div>
   </div>
 
-  <div class="container" id="chatInput" style="height: 15%;">
-    <input type="text" id="textMessage" [(ngModel)]="textMessage" class="form-control" (keydown.enter)="sendRequest()">
+  <div class="input-group mb-3" id="chatInput" >
+    <input type="text" class="form-control" placeholder="Type your message here..." id="textMessage" [(ngModel)]="textMessage" (keydown.enter)="sendRequest()">
     <div class="input-group-append">
-      <input type="file" id="attachment" (change)="onFileChange($event)" #attachment>
-      <button class="btn btn-secondary" type="button" (click)="clearFileSelection()">Clear</button>
-      <button class="btn btn-primary" type="button" (click)="sendRequest()">Send</button>
+      <div class="custom-file">
+        <input type="file" class="custom-file-input" id="attachment" (change)="onFileChange($event)" #attachment>
+        <label class="custom-file-label" for="attachment">{{ getFileName() }}</label>
+      </div>
+      <div class="input-group-append">
+          <button class="btn btn-secondary" type="button" (click)="clearFileSelection()">Clear</button>
+          <button class="btn btn-primary" type="button" (click)="sendRequest()">Send</button>
+      </div>
     </div>
   </div>
 </div>
-
