--- a/src/app/message/text-message/text-message.component.html
+++ b/src/app/message/text-message/text-message.component.html
@@ -1,5 +1,5 @@
 <div [ngClass]="{
-    'bg-success text-white text-right tri-right right-in': sender === 'You',
+    'bg-secondary text-white text-right tri-right right-in': sender === 'You',
     'bg-light tri-left left-in': sender === 'ChatBot'
 }" class="row card round">
     <div class="card-body">
