--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ html, body {
 	right: -25px;
   	top: 30%;
 	border: 12px solid;
-	border-color: #28a745 transparent transparent #28a745;
+	border-color: #6c757d transparent transparent #6c757d;
 }
 
 .tri-left.left-in:after{
