--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="container fixed-bottom" id="chatInput">
+<div class="container" id="chatInput">
   <div class="row input-group m-1">
     <input type="text" class="form-control" placeholder="Type your message here..." id="textMessage" [(ngModel)]="textMessage"
       (keydown.enter)="sendRequest()">
