Attachment upload delay

--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -2,6 +2,7 @@
   <ng-template message-host></ng-template>
   <div class="row justify-content-center">
     <span *ngIf="botTyping" class="badge badge-primary">Bot is typing ...</span>
+    <span *ngIf="attachmentUploading" class="badge badge-primary">Attachment is getting uploaded ...</span>
   </div>
 </div>
 
