Changing colors, delay in graphs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-info" style="height: 100%;">
+<div class="container" style="height: 100%; background-color: whitesmoke">
     <app-chatbox></app-chatbox>
 </div>
 <router-outlet></router-outlet>
