--- a/src/app/message/graph-message/graph-message.component.html
+++ b/src/app/message/graph-message/graph-message.component.html
@@ -1,12 +1,12 @@
 <div [ngClass]="{
-    'bg-success text-white text-right tri-right right-in': sender === 'You',
-    'bg-light tri-left left-in': sender === 'ChatBot'
+    'chat-message-box-user text-right tri-right right-in': sender === 'You',
+    'chat-message-box-bot tri-left left-in': sender === 'ChatBot'
 }" class="row card round">
     <div class="card-body">
         <p class="card-title">
             <b>{{ sender }}</b>
         </p>
-        <div>
+        <div style="width:80%; height: 80%;">
             <canvas [id]="message['title']">{{ chart }}</canvas>
         </div>
     </div>
