--- a/src/app/modalview/modalview.component.html
+++ b/src/app/modalview/modalview.component.html
@@ -2,7 +2,7 @@
   <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Modal
   </button>
-  <div class="dropdown-menu"  style="height: 600px; width: auto; max-width: 600px; background-color:skyblue" (click)="$event.stopPropagation()">
+  <div class="dropdown-menu"  style="height: 600px; width: auto; max-width: 450px; background-color:whitesmoke" (click)="$event.stopPropagation()">
     <app-chatbox></app-chatbox>
   </div>
 </div>
