--- a/src/app/message/graph-message/graph-message.component.html
+++ b/src/app/message/graph-message/graph-message.component.html
@@ -6,7 +6,7 @@
         <p class="card-title">
             <b>{{ sender }}</b>
         </p>
-        <div style="width:80%; height: 80%;">
+        <div style="width:80%;">
             <canvas [id]="message['title']">{{ chart }}</canvas>
         </div>
     </div>
