--- a/src/app/message/text-message/text-message.component.html
+++ b/src/app/message/text-message/text-message.component.html
@@ -6,6 +6,6 @@
         <p class="card-title">
             <b>{{ sender }}</b>
         </p>
-        <p class="card-text">{{ message }}</p>
+        <p class="card-text" [innerHTML]="message"></p>
     </div>
 </div>
