Adding Product Chatbot

--- a/src/app/modalview/modalview.component.html
+++ b/src/app/modalview/modalview.component.html
@@ -3,6 +3,6 @@
     Modal
   </button>
   <div class="dropdown-menu"  style="height: 600px; width: auto; max-width: 450px; background-color:whitesmoke" (click)="$event.stopPropagation()">
-    <app-chatbox></app-chatbox>
+    <router-outlet></router-outlet>
   </div>
 </div>
