--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container" style="height: 100%; background-color: whitesmoke">
-    <app-chatbox></app-chatbox>
+    <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
+<app-modalview *ngIf="modal"></app-modalview>
