--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -22,5 +22,8 @@
     <div class="input-group-append">
       <button class="btn btn-secondary" type="button" (click)="clearFileSelection()">Clear</button>
     </div>
+    <div class="input-group-append">
+      <button class="btn btn-dark" type="button" (click)="reset()">Reset Chat</button>
+    </div>
   </div>
 </div>
